deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels: 
    app: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels: 
        app: products
    spec:
      containers:
        - name: products
          image: raiderpoc.azurecr.io/products:latest
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: regcred
