service.yaml
kind: Service
apiVersion: v1
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: products
  ports:
  - name: http 
    protocol: TCP
    port: 5001
    targetPort: 5001
    # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
