Ingress-basic.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-cpr
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:  
  rules:
  - http:
      paths:
      - path: /identity
        backend:
          serviceName: identity-service
          servicePort: 5000
      - path: /products
        pathType: Prefix
        backend:
          serviceName: product-service
          servicePort: 5001
      - path: /
        backend:
          serviceName: identity-service
          servicePort: 5000
